# video-game-console-design

./: .gitmodules  README.md
lab1/: README.md
lab2/: CMakeLists.txt  README.md  arduino.ttysettings
lab2/src/: controller_firmware.cpp
lab3/: README.md
lab4/: .gitattributes  README.md
lab4/samples/3_Imaging/postProcessGL/: main.cpp  postProcessGL.cu
lab5/: CMakeLists.txt
lab5/src/: CMakeLists.txt  handGesture.cpp  handGesture.hpp  main.cpp  medianBlur.cu  medianBlur.hpp  myImage.cpp  myImage.hpp  roi.cpp  roi.hpp  socketServer.cpp  socketServer.hpp
lab6/: pong.py
project/: CMakeLists.txt  README.md
project/assets/: CMakeLists.txt
project/src/: CMakeLists.txt  button.cpp  button.hpp  contours.cpp  contours.hpp  hand.cpp  hand.hpp  handDetection.cpp  handDetection.hpp  interface.cpp  interface.hpp  main.cpp  median.cpp  median.hpp  silhouette.cpp  silhouette.hpp  synthesizer.cpp  synthesizer.hpp
